# fastapi-supabase-boilerplate

./: .env.example  .env.minimal  .gitignore  README.md  pyproject.toml
controllers/: health_controller.py
