[project]
name = "fast-api-supabase-boilerplate"
version = "0.1.0"
description = "A FastAPI boilerplate with Supabase integration"
authors = []

requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard]",
    "supabase",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
